@@ -4,7 +4,9 @@ Changelog
 2.1.10 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Make sure ATTopic.queryCatalog cannot be published. This fixes
+  https://plone.org/products/plone/security/advisories/20121106/14
+  [davisagli]
 
 
 2.1.9 (2012-10-11)
